--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 asgiref==3.7.2
+cffi==1.16.0
+cryptography==41.0.5
 Django==4.2.6
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
 inflection==0.5.1
 packaging==23.2
+pycparser==2.21
 PyJWT==2.8.0
+PyMySQL==1.1.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 sqlparse==0.4.4
